# ml-2

./: .gitignore  pyproject.toml
LAB_III/solution/: loader.py  test.ipynb
LAB_III/solution/iterations/: model_results_iteration_2026-04-25V3.md  model_results_iteration_2026-04-25V4.md  model_results_iteration_2026-04-26V5.md  model_results_iteration_2026-04-26V7.md  model_results_iteration_2026-04-26V8.md
LAB_III/solution/iterations/approved_results/: lab_3_full_dataset.md
LAB_IV/solution/: lab-4.ipynb
LAB_V/solution/: experiment-results.md  lab-5.ipynb
LAB_VI/data/: task.md
LAB_VI/solution/: lab-6.ipynb
