[project]
name = "ML_LABS"
version = "0.1.0"
description = "ML labs season II"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "datasets>=4.8.4",
    "kaleido>=1.2.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.0",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "tqdm>=4.67.3",
]
