[project]
name = "ML_LABS"
version = "0.1.0"
description = "ML labs season II"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "catboost>=1.2.10",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "kaleido>=1.2.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pip>=26.1.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.0",
    "wordcloud>=1.9.4",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "spacy>=3.8.0",
    "tqdm>=4.67.3",
]
